syntax = "proto3";

package user;

message VerifyCredentialsRequest {
  string email = 1;
  string password = 2;
}

message PayloadCredentials {
  string sub = 1;
}

message VerifyCredentialsResponse {
  PayloadCredentials user = 1;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message RegisterUserResponse {
  UserResponse user = 1;
}

service UserService {
  rpc VerifyCredentials(VerifyCredentialsRequest) returns (VerifyCredentialsResponse) {}
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}
